Changes for APR 1.2.9

  *) Fix possible EFAULT failures in apr_socket_sendfile() on 32-bit
     Solaris with LFS enabled.  PR 39463.  [Joe Orton, Joseph Tam
     <tam math.ubc.ca>]

  *) Fix deadlock in apr_file_gets() for a file opened with both the
     APR_BUFFERED and APR_XTHREAD flags.  [Bojan Smojver, Joe Orton]

Changes for APR 1.2.8

  *) Correctly retrieve 'empty' environment values with apr_env_get
     on Win32 (e.g. "VAR="), and added validation to testall suite.  
     PR 40764.  [Issac Goldstand <margol beamartyr.net>]

  *) APR_FIND_APR macro no longer checks /usr/local/apache2/.
     PR 40842.  [Colm MacCarthaigh]

  *) Portably check for EEXIST in mktemp code.  PR 40818
     [Kenneth Golomb <KGolomb TradeCard.com>]

  *) Fix apr_snprintf/apr_vsnprintf return value to not count the
     NUL terminator in the overflow case.  PR 39996.
     [Michal Luczaj <regenrecht o2.pl>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

  *) Fix detection of pthread cross-process robust mutexes.
     PR 39833.  [Tsuyoshi SASAMOTO <nazonazo miobox.jp>]

  *) NetBSD: Avoid leaving zombie process when using apr_signal() 
     to ignore SIGCHLD.  PR 36750.  [Todd Vierling <tv pobox.com>]

  *) Fix apr_socket_sendv() for platforms without writev.
     PR 38822.  [Joe Orton]

  *) Avoid issues using >2Gb of data per call with sendfile() on
     64-bit Linux platforms.  [Joe Orton]

Changes for APR 1.2.7

  *) Netware - add missing apu_version.c parsing for apu_version_string()
     to the Netware specific builds.  Unix platforms support this API 
     since 0.9.1.  [Brad Nicholes]

  *) Fix a regression in the updated win32 apr_file_read with timeouts
     since 1.2.6 which would fail to return the bytes read in specific
     edge cases.  [William Rowe]

Changes for APR 1.2.6

  *) Fully test the detected libuuid or libc based uuid_create or